--- a/index.html
+++ b/index.html
@@ -76,25 +76,22 @@
 </div>
 
 <script>
-/* Everything runs AFTER the page is ready */
 window.addEventListener('DOMContentLoaded', () => {
-  document.getElementById("jsok").textContent = "JS: OK";
-
-  // Alt1 register (safe if not in Alt1)
+  document.getElementById("jsok").textContent = "JS: OK v15";
   try { if (window.alt1 && alt1.identifyAppUrl) { alt1.identifyAppUrl("https://hacza.github.io/RS3-Reset-Tracker.2/appconfig.json"); } } catch(e){}
 
-  // ===== State =====
+  /* ===== State ===== */
   const LS_KEY = "rs3_resets_tracker_v1";
   let state = load() || initDefault();
   let currentScope = "daily";
 
-  // ===== Elements =====
+  /* ===== Elements ===== */
   const el = (id) => document.getElementById(id);
   const listEl = el("list");
   const tabs = Array.from(document.querySelectorAll(".tab"));
   const profileSel = el("profile");
 
-  // ===== Profiles =====
+  /* ===== Profiles ===== */
   function refreshProfiles() {
     profileSel.innerHTML = "";
     state.profiles.forEach((p,i) => {
@@ -120,7 +117,7 @@ window.addEventListener('DOMContentLoaded', () => {
   };
   profileSel.onchange = () => { state.currentProfile = profileSel.value; save(); render(); };
 
-  // ===== Tabs =====
+  /* ===== Tabs ===== */
   tabs.forEach(t => t.onclick = () => {
     tabs.forEach(x=>x.classList.remove("active"));
     t.classList.add("active");
@@ -128,7 +125,7 @@ window.addEventListener('DOMContentLoaded', () => {
     renderList();
   });
 
-  // ===== Add & edit =====
+  /* ===== Add & edit ===== */
   el("addBtn").onclick = addItem;
   el("addText").addEventListener("keydown", e => { if (e.key === "Enter") addItem(); });
   function addItem() {
@@ -142,7 +139,7 @@ window.addEventListener('DOMContentLoaded', () => {
     save(); renderList();
   }
 
-  // ===== List render (checkbox + delete + drag) =====
+  /* ===== List render (checkbox + delete + drag) ===== */
   function renderList() {
     const arr = getScopeArr();
     listEl.innerHTML = "";
@@ -193,15 +190,172 @@ window.addEventListener('DOMContentLoaded', () => {
     });
   }
 
-  // ===== Import (we’ll debug this AFTER JS is stable) =====
-  document.getElementById("importDailyScape").onclick = () => {
-    alert("Importer is next. First we made sure the app is running.");
+  /* ===== Robust IMPORT (crawls unknown data shapes) ===== */
+  document.getElementById("importDailyScape").onclick = async () => {
+    const BTN = document.getElementById("importDailyScape");
+    const prev = BTN.textContent; BTN.textContent = "Importing…"; BTN.disabled = true;
+
+    const SOURCES = [
+      "https://dailyscape.github.io/rsdata/rsdata.js",
+      "https://cdn.jsdelivr.net/gh/dailyscape/rsdata@main/rsdata.js",
+      "https://dailyscape.github.io/rsdata/rsapidatawikibulk.js",
+      "https://cdn.jsdelivr.net/gh/dailyscape/rsdata@main/rsapidatawikibulk.js"
+    ];
+
+    try {
+      let ds = null, used = null, errs = [];
+      for (const src of SOURCES) {
+        try { delete window.rsapidata; } catch {}
+        await new Promise((resolve, reject) => {
+          const s = document.createElement("script");
+          s.src = src + "?t=" + Date.now(); s.async = true;
+          s.onload = () => resolve(); s.onerror = () => reject(new Error("script load failed"));
+          document.head.appendChild(s);
+        }).catch(e => errs.push(src+" — "+e.message));
+
+        // read either window.rsapidata OR a global let/const rsapidata
+        try { if (!ds && typeof rsapidata !== "undefined") ds = rsapidata; } catch {}
+        if (!ds && window.rsapidata) ds = window.rsapidata;
+        if (ds) { used = src; break; }
+      }
+      if (!ds) throw new Error("No dataset. Tried:\n" + errs.join("\n"));
+
+      // --- Crawl everything and pick out task-like objects ---
+      const candidates = [];
+      const seenObjs = new WeakSet();
+      const nameKeys = ["name","item","title","label","task","activity","text"];
+      const urlKeys  = ["wiki","url","link","wikilink","w"];
+      const FREQ_WORDS = ["daily","week","month"]; // used to infer category from any string field
+
+      function pullName(o){
+        for (const k of nameKeys) if (typeof o[k]==="string" && o[k].trim()) return o[k].trim();
+        return "";
+      }
+      function pullUrl(o){
+        for (const k of urlKeys) if (typeof o[k]==="string" && o[k].trim()) return o[k].trim();
+        return "";
+      }
+      function inferFreq(o){
+        // look across ALL string fields
+        let bucket = "";
+        for (const v of Object.values(o)){
+          if (typeof v === "string"){
+            const t = v.toLowerCase();
+            if (t.includes("daily"))  bucket = bucket || "daily";
+            if (t.includes("week"))   bucket = bucket || "weekly";
+            if (t.includes("month"))  bucket = bucket || "monthly";
+          }
+        }
+        return bucket;
+      }
+
+      function walk(x, depth=0){
+        if (depth>5 || !x) return;
+        if (Array.isArray(x)){ x.forEach(v=>walk(v, depth+1)); return; }
+        if (typeof x === "object"){
+          if (seenObjs.has(x)) return;
+          seenObjs.add(x);
+
+          // if it looks like a task (has a name), record it
+          const nm = pullName(x);
+          if (nm){
+            candidates.push({
+              name: nm,
+              url: pullUrl(x),
+              bucket: inferFreq(x)
+            });
+          }
+          // keep walking
+          for (const v of Object.values(x)) walk(v, depth+1);
+        }
+      }
+
+      walk(ds);
+
+      // classify + dedupe
+      const daily   = [];
+      const weekly  = [];
+      const monthly = [];
+      const unknown = [];
+
+      const has = new Set();
+      function pushUnique(arr, t){
+        const key = t.name.toLowerCase();
+        if (key && !has.has(key)){ arr.push(t); has.add(key); }
+      }
+
+      candidates.forEach(t => {
+        if (t.bucket === "daily")   pushUnique(daily, t);
+        else if (t.bucket === "weekly") pushUnique(weekly, t);
+        else if (t.bucket === "monthly")pushUnique(monthly, t);
+        else unknown.push(t);
+      });
+
+      // If nothing inferred, try an additional heuristic:
+      if (!daily.length && !weekly.length && !monthly.length){
+        // Some datasets group by numeric keys -> often "dailies" text lives in a parent node title.
+        // Take unknowns and just drop the first 50 into 'daily' as a sanity check.
+        // (This keeps you moving; we can tune after seeing the diagnostic sample names.)
+        unknown.slice(0,50).forEach(t=>pushUnique(daily,t));
+      }
+
+      const found = { daily: daily.length, weekly: weekly.length, monthly: monthly.length };
+      const sample =
+        (daily[0]?.name||"") + " | " +
+        (weekly[0]?.name||"") + " | " +
+        (monthly[0]?.name||"");
+
+      // merge into profile
+      const added = { daily:0, weekly:0, monthly:0 };
+      const buckets = { daily, weekly, monthly };
+      ["daily","weekly","monthly"].forEach(scope => {
+        const incoming = buckets[scope] || [];
+        const here = state.profiles[getP()].items[scope];
+        const have = new Set(here.map(h => (h.name || "").toLowerCase()));
+        incoming.forEach(t => {
+          const key = (t.name || "").toLowerCase();
+          if (!key || have.has(key)) return;
+          here.push({ id: uid(), name: t.name, url: t.url || "", done: false });
+          have.add(key);
+          added[scope]++;
+        });
+      });
+
+      save(); renderList();
+
+      let msg = `Imported from DailyScape
+Found: ${found.daily} daily, ${found.weekly} weekly, ${found.monthly} monthly.
+Added: ${added.daily} daily, ${added.weekly} weekly, ${added.monthly} monthly.
+Source: ${used}`;
+      if (!found.daily && !found.weekly && !found.monthly) {
+        // show first few names it saw so I can map properly
+        const names = candidates.slice(0,10).map(x=>x.name).filter(Boolean).join(", ") || "(no names detected)";
+        msg += `
+
+Diagnostics:
+Saw ${candidates.length} candidate objects.
+Sample names: ${names}`;
+      } else {
+        msg += `
+
+Samples:
+Daily: ${daily[0]?.name||"(none)"} | Weekly: ${weekly[0]?.name||"(none)"} | Monthly: ${monthly[0]?.name||"(none)"}`;
+      }
+      alert(msg);
+
+    } catch (e) {
+      console.error(e);
+      alert("Import failed: " + e.message);
+    } finally {
+      BTN.textContent = prev; BTN.disabled = false;
+    }
   };
 
-  // ===== Timers (UTC) =====
+  /* ===== Timers (UTC) ===== */
   function nextDailyUTC(now=new Date())   { return new Date(Date.UTC(now.getUTCFullYear(), now.getUTCMonth(), now.getUTCDate()+1, 0,0,0)); }
   function nextWeeklyUTC(now=new Date())  { const day = now.getUTCDay(); const daysToWed = (3 - day + 7) % 7 || 7; return new Date(Date.UTC(now.getUTCFullYear(), now.getUTCMonth(), now.getUTCDate()+daysToWed, 0,0,0)); }
   function firstOfNextMonthUTC(now=new Date()) { const y=now.getUTCFullYear(), m=now.getUTCMonth(); return new Date(Date.UTC(m===11?y+1:y, (m+1)%12, 1, 0,0,0)); }
+
   function tickClocks() {
     const now = new Date();
     el("nextDaily").textContent   = eta(nextDailyUTC(now)-now);
@@ -219,12 +373,13 @@ window.addEventListener('DOMContentLoaded', () => {
     if (now >= next) {
       state.profiles[getP()].items[scope].forEach(x=>x.done=false);
       state.meta[field] = now.toISOString();
-      save(); renderList();
+      save();
+      renderList();
     }
   }
   function eta(ms) { if (ms<0) ms=0; const s=Math.floor(ms/1000); const h=String(Math.floor(s/3600)).padStart(2,"0"); const m=String(Math.floor((s%3600)/60)).padStart(2,"0"); const ss=String(s%60).padStart(2,"0"); return `${h}:${m}:${ss}`; }
 
-  // ===== Helpers =====
+  /* ===== Helpers ===== */
   function initDefault() {
     return {
       currentProfile: "0",
@@ -243,6 +398,9 @@ window.addEventListener('DOMContentLoaded', () => {
   refreshProfiles(); render(); tickClocks();
   function render(){ refreshProfiles(); tabs.forEach(t => t.classList.toggle("active", t.dataset.scope===currentScope)); renderList(); }
 
+  // extra buttons
+  document.getElementById("clearDone").onclick = () => { getScopeArr().forEach(x=>x.done=false); save(); renderList(); };
+  document.getElementById("resetScope").onclick = () => { if (confirm("Clear all tasks on this tab?")) { state.profiles[getP()].items[currentScope] = []; save(); renderList(); } };
 });
 </script>
 </body>
